--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Page Title</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>Solar System</title>
 </head>
 <body>
-<h1>The Solar System</h1>
+    <h1>The Solar System</h1>
     <p>
       Based on
       <a
